chore: update project configuration and ignore unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,31 @@ Thumbs.db
 cython_debug/
 .git/
 /.pnpm-store
+
+# Additional general ignore rules
+*.bak
+*.orig
+*.swp
+*.swo
+*.class
+*.jar
+*.pyc
+*.pyo
+__pycache__/
+*.iml
+.idea/
+*.DS_Store
+node_modules/
+dist/
+tmp/
+logs/
+*.log
+*.local
+*.local.yml
+*.local.json
+*.local.env
+*.local.js
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
