--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DATABASE_URL="mysql://root:MRHYTimE@30.0.0.137:32781/test01"
-REDIS_URL=redis://:${REDISCLI_AUTH}@${REDIS_HOST}:${REDIS_PORT}
-REDISCLI_AUTH=JzjDVdGM
-REDIS_HOST=30.0.0.137
-REDIS_PORT=32784
+DATABASE_URL="file:./dev.db"
