chore: update environment configuration and add new feature files

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://root:AQGXgPCR@30.0.8.33:32786/test01"
+REDIS_URL=redis://:${REDISCLI_AUTH}@${REDIS_HOST}:${REDIS_PORT}
+REDISCLI_AUTH=DUyAFzzx
+REDIS_HOST=30.0.8.33
+REDIS_PORT=32785
