feat: update environment configuration and improve music library functionality

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="mysql://root:AQGXgPCR@30.0.8.33:32786/test01"
+DATABASE_URL="mysql://root:pIacQnTv@30.0.2.137:32816/test01"
 REDIS_URL=redis://:${REDISCLI_AUTH}@${REDIS_HOST}:${REDIS_PORT}
-REDISCLI_AUTH=DUyAFzzx
-REDIS_HOST=30.0.8.33
-REDIS_PORT=32785
+REDISCLI_AUTH=UsOYeyWB
+REDIS_HOST=30.0.2.137
+REDIS_PORT=32817
