feat: enhance audio API and view implementation

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="mysql://root:pIacQnTv@30.0.2.137:32816/test01"
+DATABASE_URL="mysql://root:KokSkfCJ@30.0.15.182:32768/test01"
 REDIS_URL=redis://:${REDISCLI_AUTH}@${REDIS_HOST}:${REDIS_PORT}
-REDISCLI_AUTH=UsOYeyWB
-REDIS_HOST=30.0.2.137
-REDIS_PORT=32817
+REDISCLI_AUTH=EnlPggzw
+REDIS_HOST=30.0.15.182
+REDIS_PORT=32771
