Update environment variables in .env and reorganize .gitignore for Clacky-related files

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/test01"
 REDIS_URL=redis://:${REDISCLI_AUTH}@${REDIS_HOST}:${REDIS_PORT}
+MYSQL_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/your_database_name"
+POSTGRESQL_URL="postgresql://${POSTGRE_SQL_USER}:${POSTGRE_SQL_PASSWORD}@${POSTGRE_SQL_HOST}:${POSTGRE_SQL_PORT}/your_database_name"
